# Solana-fellowship

Airdrop/: index.js
Voting_contract/: README.md  Readme.md  lib.rs  voting.json
programs/BiDirectional/: Cargo.toml
programs/BiDirectional/src/: lib.rs
roulette/: index.js
week 3/rust_calculator/: lib.rs
week 5/Go-wallet/cmd/: createWallet.go  importWallet.go  requestAirdrop.go  root.go  transfer.go  utils.go
week 5/javascript-crypto/: package-lock.json
week 5/javascript-crypto/src/: App.js
week-4/create-nft/src/: App.js
week-4/create-nft/src/utils/: nftCreation.js
week-4/marketplace/: index.js
week-6/decentralized-identity/: Anchor.toml
week-6/decentralized-identity/exercise-shared_wallet/: Anchor.toml
week-6/decentralized-identity/exercise-shared_wallet/programs/sharedWallet/: Cargo.toml
week-6/decentralized-identity/exercise-shared_wallet/programs/sharedWallet/src/: lib.rs
week-6/decentralized-identity/exercise-shared_wallet/tests/: sharedWallet.ts
week-6/decentralized-identity/programs/identity/: Cargo.toml
week-6/decentralized-identity/programs/identity/src/: lib.rs
week-6/decentralized-identity/tests/: identity.ts
week-6/solblog/: README.md
week-6/solblog/programs/solblog/: Cargo.toml
week-6/solblog/programs/solblog/src/: lib.rs
week-6/stake-sol/stakingsol/: package-lock.json  package.json
week-6/stake-sol/stakingsol/src/utils/: stakeSOL.js
