[package]
name = "BiDirectional"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bi_directional"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
smart-wallet = "0.7.0"
anchor-spl = "0.22.0"
serum-multisig = {git = "https://github.com/project-serum/multisig/"}